--- a/views/newproject.ejs
+++ b/views/newproject.ejs
@@ -15,7 +15,7 @@
   </head>
   <body>
     <% include ./navbar.ejs %>
-    
+
     <h1>새 프로젝트 등록</h1>
     <div class="container-fluid">
       <div class="row">
@@ -34,18 +34,18 @@
                    설명: <textarea type="text" name="pdesc" placeholder="" class="form-projectdesc form-control" id="pdesc"> </textarea>
               </div>
                 <div class="input-group">
-                  Task선택 <br>
-                  <input type="checkbox" name="task" value="estimation" checked> Spec 산정 및 견적 산정 <br>
-                  <input type="checkbox" name="task" value="build-plan"checked> 구축 계획 <br>
-                  <input type="checkbox" name="task" value="kickoff" checked> Kick off meeting <br>
-                  <input type="checkbox" name="task" value="workrequest" checked> 공사 신청서 작성 및 승인 <br>
-                  <input type="checkbox" name="task" value="equip-delivery" checked> 장비 납품 <br>
-                  <input type="checkbox" name="task" value="network" checked> 네트워크 할당 요청, 수령 및 공사 진행 <br>
-                  <input type="checkbox" name="task" value="at" checked> 인수시험 절차서 작성 및 검토<br>
-                  <input type="checkbox" name="task" value="at-check" checked> 인수시험 확인<br>
-                  <input type="checkbox" name="task" value="open" checked> 개통<br>
-                  <input type="checkbox" name="task" value="final-acceptance" checked> 최종 인수 <br>
-                  <input type="checkbox" name="task" value="bp" checked> 인력/BP 관리<br>
+                  Task <br>
+                  <input type="checkbox" name="task" value="estimation" checked disabled> Spec 산정 및 견적 산정 <br>
+                  <input type="checkbox" name="task" value="build-plan"checked disabled> 구축 계획 <br>
+                  <input type="checkbox" name="task" value="kickoff"> Kick off meeting <br>
+                  <input type="checkbox" name="task" value="workrequest"> 공사 신청서 작성 및 승인 <br>
+                  <input type="checkbox" name="task" value="equip-delivery" checked disabled> 장비 납품 <br>
+                  <input type="checkbox" name="task" value="network"> 네트워크 할당 요청, 수령 및 공사 진행 <br>
+                  <input type="checkbox" name="task" value="at" checked disabled> 인수시험 절차서 작성 및 검토<br>
+                  <input type="checkbox" name="task" value="at-check" checked disabled> 인수시험/개통  확인<br>
+                  <!--input type="checkbox" name="task" value="open" checked> 개통<br-->
+                  <input type="checkbox" name="task" value="final-acceptance" checked disabled> 최종 인수 <br>
+                  <!--input type="checkbox" name="task" value="bp" checked> 인력/BP 관리<br-->
                 </div><!-- /input-group -->
               <div class="form-group">
 
