--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -22,31 +22,47 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-9">
-          <div class="panel-group">
-          <div class="panel panel-default">
-            <div class="panel-heading">Panel Header</div>
-            <div class="panel-body">Panel Content <span class="caret" > </span> </div>
-          </div>
-          <div class="panel panel-default">
-            <div class="panel-heading">Panel Header</div>
-            <div class="panel-body">Panel Content <span class="caret"> </span> </div>
-          </div>
-          <div class="panel panel-default">
-            <div class="panel-heading">Panel Header</div>
-            <div class="panel-body">Panel Content <span class="caret"></span> </div>
-          </div>
-            <div class="panel panel-default">
-            <div class="panel-heading">Panel Header</div>
-            <div class="panel-body">
-              <div class="comment-frame">
-                <div class="comment-box" style="border: 1px solid light-gray">
-                  <textarea class="comment-box-input js-new-comment-input" placeholder="Write a comment" tabindex="1" dir="auto" style="overflow: hidden; word-wrap: break-word; height:100px;"> </textarea>
-                </div> <!--box-->
-              </div> <!--frame-->
-            </div> <!-- panel-body-->
-          </div>
-          </div> <!-- panel group -->
-        </div> <!-- left division, colmd9 -->
+          <div class="panel-group" id="accordion">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Collapsible Group 1</a>
+        </h4>
+      </div>
+      <div id="collapse1" class="panel-collapse collapse in">
+        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Collapsible Group 2</a>
+        </h4>
+      </div>
+      <div id="collapse2" class="panel-collapse collapse">
+        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Collapsible Group 3</a>
+        </h4>
+      </div>
+      <div id="collapse3" class="panel-collapse collapse">
+        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+      </div>
+    </div>
+  </div> <!--group-->
+        </div> <!--col-->
+      </div> <!-- row-->
+    </div> <!-- left division, colmd9 -->
         <div class="col-md-3">
           <h3> 프로젝트 개요 </h3>
           <p> <%= project[0].pdesc %> </p>
