--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="common/css/progressbar.css">
 
-    <script>
+    <!--script>
     function removeProj(id){
       var result = confirm("정말 삭제하시겠습니까?");
       if(result)
@@ -35,7 +35,7 @@
   		  });
       }
     }
-    </script>
+  </script-->
   </head>
   <body>
     <% include ./navbar.ejs %>
@@ -57,29 +57,25 @@
 
         <div class="col-md-9">
           <div class="panel-group" id="accordion">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Collapsible Group 1</a>
-                </h4>
+
+            <% for(var i=0; i<project[0].task.length; i++) { %>
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href= "<%= project[0].task[i]._id %> " > Task # <%= i %> </a>
+                  </h4>
+                </div>
+                <div id=" <%= project[0].task[i]._id %>" class="panel-collapse collapse in">
+                  <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                </div>
               </div>
-              <div id="collapse1" class="panel-collapse collapse in">
-                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Collapsible Group 2</a>
-                </h4>
-              </div>
-              <div id="collapse2" class="panel-collapse collapse">
-                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-              </div>
+
+            <% } %>
+
+            
             </div>
             <div class="panel panel-default">
               <div class="panel-heading">
@@ -103,7 +99,8 @@
           <h3> 프로젝트 개요 </h3>
           <p> <%= project[0].pdesc %> </p>
           <p> <%= project[0].bp[0] %> </p>
-          <a href="/update/<%=project[0]._id %>"> 프로젝트 수정 </a> <br>
+
+          <a href="/update/<%=project[0]._id %>"> 수정 </a> <br>
           <a href="/delete/<%=project[0]._id %>"> 삭제 </a> <br>
 
         </div> <!-- right division -->
