--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -59,14 +59,14 @@
           <div class="panel-group" id="accordion">
 
             <% for(var i=0; i<project[0].task.length; i++) { %>
-
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href= "#<%=project[0].task[i]._id%>"> Task # <%= i %> : <%= project[0].task[i].tname %> </a>
                   </h4>
                 </div>
-                <div id="<%=project[0].task[i]._id%>" class="panel-collapse collapse in">
+                <!-- 여길 <div id="<%=project[0].task[i]._id%>" class="panel-collapse collapse in"> 로 해주면 열려있음. 진행중인거 이프문으로 여기 오게! -->
+                <div id="<%=project[0].task[i]._id%>" class="panel-collapse collapse">
                   <div class="panel-body">
                     <%= project[0].task[i]._id %>
 
@@ -77,24 +77,6 @@
               </div>
 
             <% } %>
-
-
-                        <div class="panel panel-default">
-                          <div class="panel-heading">
-                            <h4 class="panel-title">
-                              <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">Collapsible Group 4</a>
-                            </h4>
-                          </div>
-                          <div id="collapse4" class="panel-collapse collapse">
-                            <div class="panel-body">
-                              이 자리에 인풋박스, 첨부파일 가능한 공
-                              <input name="test" rows="5"/>
-                              <a href = ""> <span class="glyphicon glyphicon-paperclip" aria-hidden="true" > </span> </a>
-                            </div>
-                          </div>
-                        </div> <!--panel-->
-
-
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
