--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -48,12 +48,13 @@
          </div>
          <div id="navbar" class="navbar-collapse collapse">
            <ul class="nav navbar-nav">
-             <li <% if (page_name === 'dashboard') { %>class="active" <% } %> ><a href="dashboard">Dashboard</a></li>
-             <li <% if (page_name === 'newproject') { %>class="active" <% } %>><a href="newproject">New Project</a></li>
+             <li <% if (page_name === 'dashboard') { %>class="active" <% } %> ><a href="dashboard"><span class="glyphicon glyphicon-dashboard" aria-hidden="true" > </span>Dashboard</a></li>
+             <li <% if (page_name === 'newproject') { %>class="active" <% } %>><a href="newproject">새 프로젝트</a></li>
 
-             <li <% if (page_name === 'messages') { %>class="active" <% } %>><a href="messages">Messages <span class="badge" > 42 </span></a></li>
+             <li <% if (page_name === 'updateproject') { %>class="active" <% } %>><a href="updateproject">프로젝트 수정</a></li>
            </ul>
            <ul class="nav navbar-nav navbar-right">
+             <!--li <% if (page_name === 'messages') { %>class="active" <% } %>><a href="messages">Messages <span class="badge" > 42 </span></a></li-->
              <li <% if (page_name === 'mypage') { %>class="active" <% } %>><a href="mypage"> <%=name%>님 </a></li>
              <li> <a href="logout"> 로그아웃 </a> </li>
              <!--li><a href="../navbar-static-top/">Static top</a></li>
