--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -8,9 +8,9 @@
 
     <!-- CSS , menu bar 따로 넣어야함 .. -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="common/css/style.css">
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/common/css/style.css">
 
   </head>
   <body>
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="form-box">
           <div class="form-top">
-            <form role="form" action="/newprojectadded" onSubmit="return make_tasklist()" method="post" class="form-newproject">
+            <form role="form" action="/update/<%= project[0].pid %>" onSubmit="return make_tasklist()" method="post" class="form-newproject">
               <div class="form-group" style="font-weight:bold;">
                    PM: <%=name%>
                    (PM변경은 Administrator에게 요청하세요)
