--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -24,8 +24,7 @@
             <form role="form" action="/update/<%= project[0].pid %>" onSubmit="return make_tasklist()" method="post" class="form-newproject">
               <div class="form-group" style="font-weight:bold;">
                    PM: <%=name%>
-                   (PM변경은 Administrator에게 요청하세요)
-              </div>
+              </div> (PM변경은 Administrator에게 요청하세요)
               <div class="form-group">
                 <label class="sr-only" for="projectname">프로젝트명</label>
                    프로젝트명: <input type="text" name="pname" value="<%= project[0].pname %>" class="form-projectname form-control" id="pname">
