--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -35,17 +35,20 @@
               </div>
                 <div class="input-group">
                   Task <br>
-                  <%= project[0].task[3].tname %>
                   <input type="checkbox" name="task" value="estimation" checked disabled> Spec 산정 및 견적 산정 <br>
                   <input type="hidden" name="task" value="견적산정" checked>
                   <!--disabled는 체크박스 modify못하게 하지만 동시에 post때 값 무시, 그래서 redundant하지만 hidden type 추가-->
                   <input type="checkbox" name="task" value="build-plan" checked disabled> 구축 계획 <br>
                   <input type="hidden" name="task" value="구축계획" checked>
-                  <input type="checkbox" name="task" value="kickoff"> Kick-off Meeting <br>
+
+                  <input type="checkbox" name="task" value="kickoff" <% if(project[0].task[2].tname="kickoff") {%> checked <%}%>> Kick-off Meeting <br>
                   <input type="checkbox" name="task" value="작업요청"> 작업 요청서 작성 및 승인 <br>
+
                   <input type="checkbox" name="task" value="equip-delivery" checked disabled> 장비 납품 <br>
                   <input type="hidden" name="task" value="납품" checked>
+
                   <input type="checkbox" name="task" value="IP할당"> 네트워크 할당 요청, 수령 및 공사 진행 <br>
+
                   <input type="checkbox" name="task" value="at" checked disabled> 인수시험 절차서 작성 및 검토 <br>
                   <input type="hidden" name="task" value="인수시험" checked>
                   <input type="checkbox" name="task" value="at-check" checked disabled> 인수시험/개통 확인<br>
