--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -48,7 +48,7 @@
                   <input type="checkbox" name="task" value="equip-delivery" checked disabled> 장비 납품 <br>
                   <input type="hidden" name="task" value="납품" checked>
 
-                  <input type="checkbox" name="task" value="IP할당" <% for(var i=0; i<project[0].task.length; i++) { if(this.value == project.task[i].tname) { %> checked <% } %> > 네트워크 할당 요청, 수령 및 공사 진행 <br>
+                  <input type="checkbox" name="task" value="IP할당" <% for(var i=0; i<project[0].task.length; i++) { if(project.task[i].tname == "IP할당") { %> checked <% }} %> > 네트워크 할당 요청, 수령 및 공사 진행 <br>
 
                   <input type="checkbox" name="task" value="at" checked disabled> 인수시험 절차서 작성 및 검토 <br>
                   <input type="hidden" name="task" value="인수시험" checked>
