--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -65,6 +65,8 @@
 
               </div>
               <button type="submit" class="btn" style="margin:auto; display:block;"> 수정 </button>
+              <a href="/update/<%=project[0]._id %>"> 수정 </a> <br>
+              <a href="/delete/<%=project[0]._id %>"> 삭제 </a> <br>
             </form>
 
           </div>
